--- a/Publisher/My Project/Resources.resx
+++ b/Publisher/My Project/Resources.resx
@@ -127,11 +127,17 @@
   <data name="NotoSans_CondensedBoldItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotoSans-CondensedBoldItalic.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="NotoSans_CondensedItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NotoSans-CondensedItalic.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="NotoSansArabic_Bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotoSansArabic-Bold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="NotoNaskhArabicUI_Regular" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotoNaskhArabicUI-Regular.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="book_stack5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\book_stack5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="NotoKufiArabic_Bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotoKufiArabic-Bold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -148,14 +154,14 @@
   <data name="NotoNaskhArabic_Regular" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotoNaskhArabic-Regular.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="NotoSans_CondensedItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NotoSans-CondensedItalic.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="book_stack1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\book_stack1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="book-stack_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\book-stack_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="NotoSansLisu_Regular" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotoSansLisu-Regular.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="NotoSerif_Bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NotoSerif-Bold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="NotoSansArabicUI_Regular" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotoSansArabicUI-Regular.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -175,8 +181,8 @@
   <data name="NotoSans_Italic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotoSans-Italic.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="NotoSansArabicUI_Bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\NotoSansArabicUI-Bold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="NotoSerif_Bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NotoSerif-Bold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="NotoSansArmenian_Bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotoSansArmenian-Bold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -211,13 +217,16 @@
   <data name="NotoMono_Regular" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotoMono-Regular.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="NotoSansArabicUI_Bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NotoSansArabicUI-Bold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="NotoSerifArmenian_Bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotoSerifArmenian-Bold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="NotoSansArabic_Regular" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotoSansArabic-Regular.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="book-stack_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\book-stack_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="book_stack6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\book_stack6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
